--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -83,9 +83,8 @@ Design and develop web pages for a collaborative / interactive storytelling proj
 
 
         <ol>
-          <li>Take a photo every hour (while you are awake) of your
-          assigned day. This image should describe either where you
-          are or what you are doing at this time. Write down a captionfor each photo as you take them. Two or more of thesehours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
+          <li>Take a photo every hour (while you are awake) of yourassigned day. This image should describe either where you
+          are or what you are doing at this time. Write down a captionfor each photo as you take them. Two or more of these hours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
 
           <li>Organize your gathered content, focusing on how each hour is visually connected (or disconnected) to the next, as well as all the others. Crop photos or edit text as needed to clarify. Enhance hierarchy and communication through composition and typography.</li>
 
