--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -36,7 +36,7 @@
     <div class="main-content-well">
         <p class="monospace">Assignment 02 | GD 220-01 | SPRING 2016 | 3 CREDITS</p>
 
-        <h1 id="graphic-design-2">A Day in Your Life</h1>
+        <h1 id="graphic-design-2">A Day in the Life</h1>
         <h5>Adapted from an assignment by Mark Sanders</h5>
 
 
@@ -83,8 +83,8 @@ Design and develop web pages for a collaborative / interactive storytelling proj
 
 
         <ol>
-          <li>Take a photo every hour (while you are awake) of yourassigned day. This image should describe either where you
-          are or what you are doing at this time. Write down a captionfor each photo as you take them. Two or more of these hours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
+          <li>Take a photo every hour (while you are awake) of your assigned day. This image should describe either where you
+          are or what you are doing at this time. Write down a caption for each photo as you take them. Two or more of these hours must include at least two paragraphs each of detailed description about what you are doing the moment the photo was taken. Photos must be at least 1200 pixels wide (hopefully much larger).</li>
 
           <li>Organize your gathered content, focusing on how each hour is visually connected (or disconnected) to the next, as well as all the others. Crop photos or edit text as needed to clarify. Enhance hierarchy and communication through composition and typography.</li>
 
@@ -100,12 +100,12 @@ Design and develop web pages for a collaborative / interactive storytelling proj
 
         <h2>Constraints</h2>
         <ul>
-        <li>The title for your page must be the date of the day you chronicled.</li>
-        <li>The specific time / hour must be displayed in addition to your content.</li>
-        <li>Each hour of your day must have one photo and a corresponding caption. At least 2 hours of your day much each include at least 2 paragraphs of supporting text in addition to photo / caption.</li>
-        <li>All content (images and text) and supporting graphics must be your own.</li>
-        <li>Unless part of a photograph, all text must be HTML / CSS.</li>
-      </ul>
+          <li>The title for your page must be the date of the day you chronicled.</li>
+          <li>The specific time / hour must be displayed in addition to your content.</li>
+          <li>Each hour of your day must have one photo and a corresponding caption. At least 2 hours of your day much each include at least 2 paragraphs of supporting text in addition to photo / caption.</li>
+          <li>All content (images and text) and supporting graphics must be your own.</li>
+          <li>Unless part of a photograph, all text must be HTML / CSS.</li>
+        </ul>
 
 
 
@@ -113,7 +113,7 @@ Design and develop web pages for a collaborative / interactive storytelling proj
 
       <div class="call-to-action">
 
-        Download the project files <a href="html5-boilerplate_v6.zip" class="button">HTML5 Boilerplate</a>
+        Download the project files <a href="https://html5boilerplate.com" class="button">HTML5 Boilerplate</a>
 
       </div>
 
