--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -57,7 +57,7 @@ Design and develop web pages for a collaborative / interactive storytelling proj
         <h4>Schedule</h4>
 
         <p>March 1<br/>
-        Assign: Document your assigned day, record in google sheet.</p>
+        Assign: Document your assigned day using a camera, write captions for each image and write 2 paragraphs for two entries.</p>
 
         <p>March 8<br/>
         Review work<br/>
