--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -18,6 +18,7 @@
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
     <body>
+      <div id="nav"></div>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
