--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,9 @@
-<div class="nav">nav</div>
+<div class="main-nav">
+
+<ul>
+  <li><a href="../assignment-1/index.html">Assignment 1</a></li>
+  <li><a href="../assignment-2/index.html">Assignment 2</a></li>
+  <li><a href="../syllabus/index.html">Syllabus</a></li>
+</ul>
+
+</div>
