--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,14 @@
 <div class="main-nav">
 
-<ul>
+  <div class="openlink"></div>
+
+<ul class="navitems">
   <li><a href="../assignment-1/index.html">Assignment 1</a></li>
   <li><a href="../assignment-2/index.html">Assignment 2</a></li>
   <li><a href="../syllabus/index.html">Syllabus</a></li>
+  <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
+
+  <li><a class="closelink" href="#">×</a></li>
 </ul>
 
 </div>
