--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -18,7 +18,20 @@
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
     <body class="assignment-1">
-      <div id="nav"></div>
+      <div class="main-nav">
+
+        <div class="openlink"></div>
+
+      <ul class="navitems">
+        <li><a href="../assignment-1/index.html">Assignment 1</a></li>
+        <li><a href="../assignment-2/index.html">Assignment 2</a></li>
+        <li><a href="../syllabus/index.html">Syllabus</a></li>
+        <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
+
+        <li><a class="closelink" href="#">×</a></li>
+      </ul>
+
+      </div>
         <!--[if lte IE 9]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
