--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -20,7 +20,7 @@
     <body class="assignment-2">
       <div class="main-nav">
 
-        <div class="openlink"></div>
+        <div class="openlink">&#9776;</div>
 
       <ul class="navitems">
         <li><a href="../assignment-1/index.html">Assignment 1</a></li>
