--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -18,9 +18,9 @@
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
     <body>
-      <div class="main-nav">
+      <div class="main-nav"> 
 
-        <div class="openlink"></div>
+        <div class="openlink">&#9776;</div>
 
       <ul class="navitems">
         <li><a href="../assignment-1/index.html">Assignment 1</a></li>
