--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -18,13 +18,13 @@
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
     <body>
-      <div class="main-nav"> 
+      <div class="main-nav">
 
         <div class="openlink">&#9776;</div>
 
       <ul class="navitems">
-        <li><a href="../assignment-1/index.html">Assignment 1</a></li>
-        <li><a href="../assignment-2/index.html">Assignment 2</a></li>
+        <li><a href="../assignment-1/index.html">Assignment I</a></li>
+        <li><a href="../assignment-2/index.html">Assignment II</a></li>
         <li><a href="../syllabus/index.html">Syllabus</a></li>
         <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
 
