--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -22,13 +22,14 @@
 
         <div class="openlink">&#9776;</div>
 
-      <ul class="navitems">
-        <li><a href="../assignment-1/index.html">Assignment I</a></li>
-        <li><a href="../assignment-2/index.html">Assignment II</a></li>
-        <li><a href="../syllabus/index.html">Syllabus</a></li>
-        <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
+        <ul class="navitems">
+          <li><a href="../assignment-1/index.html">Assignment I</a></li>
+          <li><a href="../assignment-2/index.html">Assignment II</a></li>
+          <li><a href="../assignment-3/index.html">Assignment III</a></li>
+          <li><a href="../syllabus/index.html">Syllabus</a></li>
+          <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
 
-        <li><a class="closelink" href="#">×</a></li>
+          <li><a class="closelink" href="#">×</a></li>
       </ul>
 
       </div>
