--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -75,11 +75,11 @@ non-linear narrative that is unified as a visual system.</p>
 
         <p>April 5<br/>
         In-class: Archetype selection, research and name list (1-3)<br/>
-        Assign: Name selection and word mark / emblem design (4)</p>
+        Assign: Name selection and word mark / emblem design (4), Begin Visual system creation</p>
 
         <p>April 13<br/>
         Review work<br/>
-        Assign: Visual system creation and single-page narratives (5-6)
+        Assign: Finish Visual system creation and create single-page narratives (5-6)
         </p>
 
         <p>April 20<br/>
@@ -127,7 +127,7 @@ non-linear narrative that is unified as a visual system.</p>
 
       </div>
 
-      
+
 
 
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
@@ -143,5 +143,10 @@ non-linear narrative that is unified as a visual system.</p>
         </script>
         <script src="https://www.google-analytics.com/analytics.js" async defer></script>
         <script src="../js/tilt.jquery.min.js"></script>
+        <script>
+        $('.a3-image-illustration').tilt({
+            perspective:    800
+        })
+        </script>
     </body>
 </html>
