--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -77,11 +77,12 @@ non-linear narrative that is unified as a visual system.</p>
         <h4>Schedule</h4>
 
         <p>April 5<br/>
-        In-class: Archetype selection, research and name list (1-3)<br/>
-        Assign: Name selection and word mark / emblem design (4), Begin Visual system creation</p>
+        Assign: Archetype selection, research and name list (1-3)<br/>
+        </p>
 
         <p>April 13<br/>
         Review work<br/>
+        In-class: Name selection and word mark / emblem design (4), Begin Visual system creation<br/>
         Assign: Finish Visual system creation and create single-page narratives (5-6)
         </p>
 
