--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -59,7 +59,8 @@
 
         <div class="aside-left monospace">
         <p class="monospace"><strong>Deliverables</strong><br>
-        HTML / CSS webpage
+        5 HTML / CSS web pages (super power(s), origin story, city of residence, weakness, and arch enemy)<br>
+        1 Flag / Banner<br>
       </div>
 
 
