Added class roster

--- a/index.htm
+++ b/index.htm
@@ -12,46 +12,59 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/syllabus.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Montserrat+Alternates:400,800|Six+Caps" rel="stylesheet">
     </head>
-    <body>
+    <body class="mainpage">
+
+      <div class="main-nav">
+
+        <div class="openlink">&#9776;</div>
+
+      <ul class="navitems">
+
+        <li><a href="assignment-1/index.html">Assignment I</a></li>
+        <li><a href="assignment-2/index.html">Assignment II</a></li>
+        <li><a href="assignment-3/index.html">Assignment III</a></li>
+        <li><a href="syllabus/index.html">Syllabus</a></li>
+        <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
+        <li><a href="index.htm">Class Roster</a></li>
+        <li><a class="closelink" href="#">×</a></li>
+      </ul>
+
+      </div>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p class="monospace">GD 220.05</p>
-        <h1 id="graphic-design-2">Graphic Design 2</h1>
-        <p class="monospace"><strong>Spring 2018</strong><br>
-        3 credits <br>
-        BR 304: GD Computer Lab<br>
-        Th 4:00PM - 10:00PM<br>
-        Jan 16, 2018-<br>
-        May 4, 2018</p>
-        <h2 id="course-description">Useful Links</h2>
-        <ul>
-          <li><a target="_blank" href="syllabus/">Syllabus</a></li>
-          <li><a target="_blank" href="https://github.com/MICA-GD2-SPR18-SN">Github Profile</a></li>
-          <li><a target="_blank" href="https://mica.instructure.com/courses/2441">Instructure Page</a></li>
-        </ul>
 
-        <h2 id="course-description">Our Class</h2>
-        <ul>
-          <li><a target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a> <a target="_blank" href="https://github.com/shbugrais">Github</a> <a href="https://codepen.io/shbugrais">Codepen</a></li>
-          <li><a target="_blank" href="http://nclaure.github.io">Nicholas Claure</a> <a target="_blank" href="https://github.com/nclaure">Github</a> <a href="https://codepen.io/nclaure">Codepen</a></li>
-          <li><a target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a> <a target="_blank" href="https://github.com/noahmfisher">Github</a> <a href="https://codepen.io/noahmfisher">Codepen</a></li>
-          <li><a target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a> <a target="_blank" href="https://github.com/ljackson01">Github</a><a href="https://codepen.io/ljackson01">Codepen</a></li>
-          <li><a target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a> <a target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a href="https://codepen.io/sydneyjohnson">Codepen</a></li>
-          <li><a target="_blank" href="http://Skang04.github.io">Samuel Kang</a> <a target="_blank" href="https://github.com/Skang04">Github</a> <a href="https://codepen.io/Th0muel">Codepen</a></li>
-          <li><a target="_blank" href="http://kmcartney.github.io">Leah Lee</a> <a target="_blank" href="https://github.com/leahlee12">Github</a> <a href="https://codepen.io/leahlee12">Codepen</a></li>
-          <li><a target="_blank" href="http://ljackson01.github.io">Kiley McArtney</a> <a target="_blank" href="https://github.com/kmcartney">Github</a> <a href="https://codepen.io/kmcartney">Codepen</a></li>
-          <li><a target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a> <a target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a href="https://codepen.io/Meyers">Codepen</a></li>
-          <li><a target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a> <a target="_blank" href="https://github.com/jscaraville">Github</a> <a href="https://codepen.io/jscaraville">Codepen</a></li>
-          <li><a target="_blank" href="http://ljackson01.github.io">August Whitaker</a> <a target="_blank" href="#">Github</a> <a href="#">Codepen</a></li>
-          <li><a target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a> <a target="_blank" href="https://github.com/Bclarendon">Github</a> <a href="https://codepen.io/bclarendon">Codepen</a></li>
-          <li><a target="_blank" href="http://pho01.github.io">Pei Jung Ho</a> <a target="_blank" href="https://github.com/pho01">Github</a> <a href="https://codepen.io/Pei_Jung">Codepen</a></li>
-          <li><a target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a> <a target="_blank" href="https://github.com/musclesmunoz">Github</a> <a href="https://codepen.io/musclesmunoz">Codepen</a></li>
+
+        <ul class="classgrid">
+          <li>
+
+            <p class="monospace">GD 220.05</p>
+            <h1 id="graphic-design-2">Graphic Design 2</h1>
+            <p class="monospace"><strong>Spring 2018</strong><br>
+            12 Students <br>
+            16 Weeks <br>
+
+          </li>
+          <li><a class="namelink" target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a> <a class="sociallink" target="_blank" href="https://github.com/shbugrais">Github</a> <a class="sociallink"  href="https://codepen.io/shbugrais">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://nclaure.github.io">Nicholas Claure</a> <a class="sociallink"  target="_blank" href="https://github.com/nclaure">Github</a> <a class="sociallink"  href="https://codepen.io/nclaure">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a> <a class="sociallink"  target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a> <a class="sociallink"  target="_blank" href="https://github.com/ljackson01">Github</a><a class="sociallink"  href="https://codepen.io/ljackson01">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a> <a class="sociallink"  target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a class="sociallink"  href="https://codepen.io/sydneyjohnson">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a> <a class="sociallink"  target="_blank" href="https://github.com/Skang04">Github</a> <a class="sociallink"  href="https://codepen.io/Th0muel">Codepen</a></li>
+
+          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">Kiley McArtney</a> <a class="sociallink"  target="_blank" href="https://github.com/kmcartney">Github</a> <a class="sociallink"  href="https://codepen.io/kmcartney">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a> <a class="sociallink"  target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a class="sociallink"  href="https://codepen.io/Meyers">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a> <a class="sociallink"  target="_blank" href="https://github.com/jscaraville">Github</a> <a class="sociallink"  href="https://codepen.io/jscaraville">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">August Whitaker</a> <a class="sociallink"  target="_blank" href="#">Github</a> <a class="sociallink"  href="#">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a> <a class="sociallink"  target="_blank" href="https://github.com/Bclarendon">Github</a> <a class="sociallink"  href="https://codepen.io/bclarendon">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a> <a class="sociallink"  target="_blank" href="https://github.com/pho01">Github</a> <a class="sociallink"  href="https://codepen.io/Pei_Jung">Codepen</a></li>
+          <li><a class="namelink"  target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a> <a  class="sociallink" target="_blank" href="https://github.com/musclesmunoz">Github</a> <a class="sociallink"  href="https://codepen.io/musclesmunoz">Codepen</a></li>
         </ul>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
