--- a/assignment-3/index.html
+++ b/assignment-3/index.html
@@ -23,12 +23,13 @@
         <div class="openlink">&#9776;</div>
 
       <ul class="navitems">
+
         <li><a href="../assignment-1/index.html">Assignment I</a></li>
         <li><a href="../assignment-2/index.html">Assignment II</a></li>
         <li><a href="../assignment-3/index.html">Assignment III</a></li>
         <li><a href="../syllabus/index.html">Syllabus</a></li>
         <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
-
+        <li><a href="../index.htm">Class Roster</a></li>
         <li><a class="closelink" href="#">×</a></li>
       </ul>
 
