--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -28,6 +28,7 @@
           <li><a href="../assignment-3/index.html">Assignment III</a></li>
           <li><a href="../syllabus/index.html">Syllabus</a></li>
           <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
+          <li><a href="../index.htm">Class Roster</a></li>
 
           <li><a class="closelink" href="#">×</a></li>
       </ul>
