--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,11 @@
         <link rel="stylesheet" href="css/syllabus.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Montserrat+Alternates:400,800|Six+Caps" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900,900i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
+      </head>
     <body class="mainpage">
 
       <div class="main-nav">
